--- a/src/www/index.html
+++ b/src/www/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>LocalServer</title>
 </head>
 <body>
     <h1>Welcome to LocalServer!</h1>
-    </ul>
+    <p>Your server is now running!</p>
 </body>
 </html>
