file upload test

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -6,5 +6,8 @@
 <body>
     <h1>Welcome to LocalServer!</h1>
     <p>Your server is now running!</p>
+    <ul>
+        <li><a href="test.txt">View test.txt</a></li>
+        </ul>
 </body>
 </html>
