CSS and JavaScript support

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>LocalServer</title>
+    <title>LocalServer Test</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Welcome to LocalServer!</h1>
-    <p>Your server is now running!</p>
-    <ul>
-        <li><a href="test.txt">View test.txt</a></li>
-        </ul>
+    <p>Your server is now serving static files! 🎉</p>
+    <p>Click the heading above to test JavaScript!</p>
+    
+    <script src="script.js"></script>
 </body>
 </html>
