undisplayable icon remove

--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Welcome to LocalServer!</h1>
-    <p>Your server is now serving static files! 🎉</p>
+    <p>Your server is now serving static files!</p>
     <ul>
         <li><a href="test.txt">View test.txt</a></li>
         <li><a href="style.css">View style.css</a></li>
