--- a/www/cgi.html
+++ b/www/cgi.html
@@ -50,7 +50,7 @@
 </head>
 <body>
 
-<h1>🚀 CGI Dashboard</h1>
+<h1>CGI Dashboard</h1>
 
 <!--GET BUTTON-->
 <h3>GET CGI</h3>
@@ -140,6 +140,6 @@ async function submitForm(e) {
 }
 
 </script>
-
+<p><a href="/">Home</a></p>
 </body>
 </html>
