--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,7 @@
         <li><a href="test.txt">View test.txt</a></li>
         <li><a href="style.css">View style.css</a></li>
         <li><a href="upload.html">Test File Upload</a></li>
+        <li><a href="cgi.html">CGI Dashboard</a></li>
     </ul>
 </body>
 </html>
